fixed search result not showing results

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -66,7 +66,7 @@
         </div>
 
         <!-- SEARCHED GEAR RESULTS -->
-        <div *ngIf="searchedGear.length > 0">
+        <!-- <div *ngIf="searchedGear.length > 0">
           <div class="text-center">
             <h2>Search Results</h2>
           </div>
@@ -95,6 +95,61 @@
           </table>
           <div class="text-center">
             <p>Click a row for more details.</p>
+          </div>
+        </div>
+      </div> -->
+
+
+
+      <!-- SEARCH SEARCH CARDS -->
+      <div *ngIf="searchedGear.length > 0">
+        <div class="container" *ngFor="let item of searchedGear">
+          <div (click)="displayGearItem(item)" style="background-color: whitesmoke;" class="row">
+            <div style="background-color: whitesmoke;" class="col-xs-8">
+              <div style="background-color:white; margin: 3px" id="panels" class="panel panel">
+                <div class="panel-heading">
+                  <div class="panel-title">
+                    <div class="row">
+                      <div class="col-xs-6">
+                        <h5><span class="glyphicon glyphicon-map-marker"></span> {{item.user.address.city}},
+                          {{item.user.address.state}}</h5>
+                        <hr>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel-body">
+                    <div class="row"></div>
+                    <div class="col-xs-2">
+                      <img style="max-width:100px; height: auto;" class="img-responsive" src="{{item.imageUrl}}">
+                    </div>
+                    <div class="col-xs-4">
+                      <h4 style="margin-top:  -5px;" class="product-name"><strong>{{item.name | titlecase }}</strong>
+                      </h4>
+                      <h4><small>{{item.description | titlecase }}</small></h4>
+                      <h4 style="margin-top:  -10px;"><small>{{item.price | currency }}/ day</small></h4>
+                    </div>
+                    <div class="col-xs-6">
+                      <img class="pic" src="{{item.user.imageUrl}}">
+                      <div class="col-xs-6 text-right">
+                        <h6><strong><span class="text-muted"></span></strong></h6>
+                      </div>
+                      <div class="col-xs-4">
+                        <p>{{item.user.firstName | titlecase}}</p>
+                        <br>
+                        <div *ngIf="item.user.userLenderRating > 0 ">
+                          <h6 style="margin-left: -5px;">Lender Rating: {{item.user.userLenderRating}}</h6>
+                        </div>
+                        <ngb-rating [(rate)]="item.user.userLenderRating" [readonly]="true" max="5">
+                          <ng-template let-fill="fill" let-index="index">
+                            <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
+                          </ng-template>
+                        </ngb-rating>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -137,7 +192,7 @@
       <div *ngIf="!selected && hideSearchResult">
         <div class="container" *ngFor="let item of gearList |  gearCategory: selectedType "
           (click)="selected = gearList">
-          <div (click)="displayGearItem(item)"  style="background-color: whitesmoke;" class="row">
+          <div (click)="displayGearItem(item)" style="background-color: whitesmoke;" class="row">
             <div style="background-color: whitesmoke;" class="col-xs-8">
               <div style="background-color:white; margin: 3px" id="panels" class="panel panel">
                 <div class="panel-heading">
