--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -1,3 +1,16 @@
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
 <div class="container main-secction">
 
   <div class="row">
@@ -17,7 +30,7 @@
             <button data-toggle="modal" data-target="#editProfile" class="btn btn-defult follow "><i
                 aria-hidden="true"></i>
               Edit</button>
-            <button class="btn btn-defult follow" data-toggle="modal" data-target="#addGear">Add</button>
+            <button class="btn btn-defult follow" data-toggle="modal" data-target="#addGear"><span style="margin: 2px"class="glyphicon glyphicon-search"></span>Add</button>
           </div>
 
           <div class="row user-detail-row">
@@ -177,8 +190,8 @@
                       [(ngModel)]="editedUser.phone" aria-label="Default" aria-describedby="inputGroup-sizing-default">
 
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                      <button type="button" (click)="updateUser(editedUser)" class="btn btn-primary"
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="button" (click)="updateUser(editedUser)" class="btn btn-save"
                         data-dismiss="modal">Update</button>
                     </div>
                   </div>
@@ -255,7 +268,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" (click)="addGear(newGear)"  class="btn btn-primary" data-dismiss="modal">Save changes</button>
+        <button type="button" (click)="addGear(newGear)"  class="btn btn-save" data-dismiss="modal">Save changes</button>
       </div>
       <!-- (click)="onAddClick(lgModal)" -->
     </div>
@@ -352,7 +365,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" (click)="updateGear(updatedGear)" class="btn btn-primary"
+                  <button type="button" (click)="updateGear(updatedGear)" class="btn btn-save"
                     data-dismiss="modal">Save
                     changes</button>
                 </div>
@@ -540,7 +553,7 @@
             <h5>Are you sure you want to delete this item?</h5>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <button type="button" (click)="deleteGear()" class="btn btn-primary" data-dismiss="modal">Delete
+              <button type="button" (click)="deleteGear()" class="btn btn-save" data-dismiss="modal">Delete
                 Item</button>
             </div>
           </div>
