edited comment/ review section styling

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -237,6 +237,14 @@ input[type=text]:focus {
   width: 160%;
 }
 
+.user_name{
+  font-size:14px;
+  font-weight: bold;
+}
+.comments-list .media{
+  border-bottom: 1px dotted #ccc;
+}
+
 
 
 
