--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -28,9 +28,9 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
             <button data-toggle="modal" data-target="#editProfile" class="btn btn-defult follow "><i
-                aria-hidden="true"></i>
+                aria-hidden="true"></i><span style="margin: 2px" class="glyphicon glyphicon-pencil"></span>
               Edit</button>
-            <button class="btn btn-defult follow" data-toggle="modal" data-target="#addGear"><span style="margin: 2px"class="glyphicon glyphicon-search"></span>Add</button>
+            <button class="btn btn-defult follow" data-toggle="modal" data-target="#addGear"><strong style="font-size: 10px;">+</strong>Gear</button>
           </div>
 
           <div class="row user-detail-row">
