map added to item description

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -306,6 +306,17 @@
                     </div>
                   </div>
                 </div>
+                <div>
+
+                  <hr>
+                </div>
+
+                <div class="map">
+                  <iframe src="https://maps.google.com/maps?q={lat},{long}&hl=es;z=10&amp;output=embed" height="300"
+                    style="border:0;" allowfullscreen=""></iframe>
+                </div>
+
+
 
 
 
