Added basic h3 to show current selected category on gear list

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -258,6 +258,11 @@ input[type=text]:focus {
     color: orange;
   }
 
+  h3 {
+    text-align: center ;
+    text-decoration: underline;
+  }
+
 
 
 
