--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -44,7 +44,7 @@
               name="keyword" [(ngModel)]="keyword" minlength="1" maxlength="100">
           </div>
           <!-- RESET BUTTON -->
-          <button style="margin-left: 530px" class="btn btn-outline-secondary" (click)="ngOnInit()"><span
+          <button style="margin-left: 530px" class="btn btn-outline-secondary" (click)="ngOnInit(); selectedType = 'All'"><span
               style="margin: 2px" class="glyphicon glyphicon-th-list"></span> See all
             Items</button>
         </form>
@@ -53,7 +53,7 @@
               <span class="showHand hover border border-warning rounded" *ngFor="let category of categories" (click)="selectedType = category">&nbsp;{{category}}&nbsp;</span>
             </li>
           </ul>
-        <br>
+        <h3>{{selectedType}}</h3>
         <br>
 
         <!-- SEARCHED GEAR RESULTS -->
