update res working on frontend

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -446,6 +446,20 @@
                           <!-- <form> -->
                           <input class="form-control" type="text" aria-label="Search" name="approved"
                             [(ngModel)]="selectedRes.approved">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.createdAt}}" name="createdAt"
+                            [(ngModel)]="selectedRes.createdAt">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.openDate}}" name="openDate"
+                            [(ngModel)]="selectedRes.openDate">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.closeDate}}" name="closeDate"
+                            [(ngModel)]="selectedRes.closeDate">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.gearId}}" name="gearId"
+                            [(ngModel)]="selectedRes.gearId">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.completed}}" name="completed"
+                            [(ngModel)]="selectedRes.completed">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.userShopper}}" name="userShopper"
+                            [(ngModel)]="selectedRes.userShopper">
+                          <input class="form-control" type="hidden" aria-label="Search" value="{{res.updatedAt}}" name="updatedAt"
+                            [(ngModel)]="selectedRes.updatedAt">
 
                           <!-- <input class="form-control" type="hidden"  value="res.user.id" aria-label="Search"
                               name="approved" [(ngModel)]="selectedRes.gearId.user.id"> -->
