--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -168,7 +168,7 @@
                       <div class="row">
                         <div class="col-xs-6">
                           <h5><span class="glyphicon glyphicon-map-marker"></span> {{item.user.address.city}},
-                            {{item.user.address.state}} </h5> <h6 style="color: orange; margin-right: -5px">{{distanceFromGear | number : '1.1-2'}} Miles from you</h6>
+                            {{item.user.address.state}} </h5> <h6 style="color: orange; margin-right: -5px">{{item.distance | number : '1.1-2'}} Miles from you</h6>
                           <hr>
                         </div>
                       </div>
