reservations updating properly on front end

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -444,22 +444,22 @@
                         <div class="input-group mb-3">
 
                           <!-- <form> -->
-                          <input class="form-control" type="text" aria-label="Search" name="approved"
-                            [(ngModel)]="selectedRes.approved">
+                          <!-- <input class="form-control" type="text" aria-label="Search" name="approved"
+                            [(ngModel)]="selectedRes.approved"> -->
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.createdAt}}" name="createdAt"
-                            [(ngModel)]="selectedRes.createdAt">
+                            [(ngModel)]="res.createdAt">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.openDate}}" name="openDate"
-                            [(ngModel)]="selectedRes.openDate">
+                            [(ngModel)]="res.openDate">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.closeDate}}" name="closeDate"
-                            [(ngModel)]="selectedRes.closeDate">
+                            [(ngModel)]="res.closeDate">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.gearId}}" name="gearId"
-                            [(ngModel)]="selectedRes.gearId">
+                            [(ngModel)]="res.gearId">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.completed}}" name="completed"
-                            [(ngModel)]="selectedRes.completed">
+                            [(ngModel)]="res.completed">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.userShopper}}" name="userShopper"
-                            [(ngModel)]="selectedRes.userShopper">
+                            [(ngModel)]="res.userShopper">
                           <input class="form-control" type="hidden" aria-label="Search" value="{{res.updatedAt}}" name="updatedAt"
-                            [(ngModel)]="selectedRes.updatedAt">
+                            [(ngModel)]="res.updatedAt">
 
                           <!-- <input class="form-control" type="hidden"  value="res.user.id" aria-label="Search"
                               name="approved" [(ngModel)]="selectedRes.gearId.user.id"> -->
