changed focus color profile input forms

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -177,12 +177,12 @@
 
                     <!-- PHONE -->
                     <div class="input-group mb-3">
-                      <div class="input-group-prepend">
+                      <div class="input-group-prependd">
                         <span class="input-group-text" id="inputGroup-sizing-default">Phone</span>
                       </div>
-                      <input type="text" class="form-control" [(ngModel)]="editedUser.phone"
+                      <input type="tel" class="form-control" [(ngModel)]="editedUser.phone"
                         placeholder="{{loggedInUser.phone}}" aria-label="Default"
-                        aria-describedby="inputGroup-sizing-default" [(ngModel)]="editedUser.imageUrl">
+                        aria-describedby="inputGroup-sizing-default">
                     </div>
 
                     <!-- HIDDEN FIELD _ USER ID -->
