--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -50,11 +50,10 @@
 #panels:hover {
   background-color: white;
   transition: transform 0.4s;
-  transition-delay: .1s;
+  transition-delay: 0.1s;
   transform: scale(1.01);
   transform-style: preserve-3d;
 }
-
 
 .list-group {
   /* background-color: blue; */
@@ -175,8 +174,6 @@
   opacity: 1;
 }
 
-
-
 * {
   box-sizing: border-box;
 }
@@ -219,21 +216,21 @@
   background-color: white !important;
 }
 
-input[type=text] {
+input[type="text"] {
   width: 70%;
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
 }
 
-input[type=text]:focus {
+input[type="text"]:focus {
   width: 160%;
 }
 
-.user_name{
-  font-size:14px;
+.user_name {
+  font-size: 14px;
   font-weight: bold;
 }
-.comments-list .media{
+.comments-list .media {
   border-bottom: 1px dotted #ccc;
 }
 
@@ -242,17 +239,71 @@ input[type=text]:focus {
   color: white;
   background-color: grey;
   font-size: 15px;
+  padding-left: 2px;
+  padding-right: 3px;
+  cursor: pointer;
+  /* width: 40px !important; */
+
+}
+.nav-container{
+  width: 110%;
+}
+
+
+.nav-tabs span.showHand {
+  width: 30%;
+  /* padding: 10px 5px; */
+}
+span:hover {
+  color: orange;
+  /* width: 40px; */
+}
+
+h3 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+/* SLIDER STYLING */
+.slidecontainer {
+  width: 50%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 25%;
+  height: 25px;
+  margin-top: 105px;
+  margin-left: 180px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: orange;
   cursor: pointer;
 }
-  span:hover{
-    color: orange;
-  }
 
-  h3 {
-    text-align: center ;
-    text-decoration: underline;
-  }
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  cursor: pointer;
+}
 
-
-
-
+.sliderLabel {
+  margin-bottom: -100px;
+  margin-left: -120px;
+  color: orange;
+}
