--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="firstName">First Name:
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name" ngModel
-                required></label>
+                required minlength="1"></label>
           </div>
 
           <div class="form-group">
             <label for="lastName">Last Name:
               <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name" ngModel
-                required></label>
+                required minlength="1"></label>
           </div>
 
           <div class="form-group">
@@ -53,8 +53,8 @@
           <!-- Add Address -->
           <div class="form-group">
             <label for="address">Address:
-              <input type="text" class="form-control" id="address" name="address" placeholder="address" ngModel
-                required></label>
+              <input type="text" class="form-control" id="address" name="address" placeholder="address" ngModel required
+                minlength="3"></label>
           </div>
 
           <div class="form-group">
@@ -65,13 +65,14 @@
 
           <div class="form-group">
             <label for="city">City:
-              <input type="text" class="form-control" id="city" name="city" placeholder="city" ngModel required></label>
+              <input type="text" class="form-control" id="city" name="city" placeholder="city" ngModel required
+                minlength="1"></label>
           </div>
 
           <div class="form-group">
             <label for="state">State:
-              <input type="text" class="form-control" id="state" name="state" placeholder="state" ngModel
-                required></label>
+              <input type="text" class="form-control" id="state" name="state" placeholder="state" ngModel required
+                minlength="2"></label>
           </div>
 
           <div class="form-group">
