Added active row to Review of Gear, Lender, and Shopper

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -253,7 +253,7 @@
                         <span class="input-group-text" style="width: 117px" id="inputGroup-sizing-default">Category</span>
                       </div>
                       <select placeholder="Category" class="form-control"
-                        [(ngModel)]="newGear.categories">
+                        [(ngModel)]="newGear.categories" multiple searchable>
                       <option>All</option>
                       <option>Mountain Biking</option>
                       <option>Skating</option>
@@ -264,8 +264,14 @@
                       <option>Water Sports</option>
                       <option>Rock Climbing</option>
                       <option>Skiing</option>
-                      <option>All</option>
-                      <option>All</option>
+                      <option>Snowboarding</option>
+                      <option>Freefalling</option>
+                      <option>Wakeboarding</option>
+                      <option>Snow</option>
+                      <option>Water</option>
+                      <option>Mountain</option>
+                      <option>Sky</option>
+                      <option>Winter</option>
                       </select>
                     </div>
 
