restriction on admin

--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -268,12 +268,12 @@
             >
               Back
             </button>
-            <button class="btn btn-outline-warning" *ngIf="!selectedGear.active">
+            <!-- <button class="btn btn-outline-warning" *ngIf="!selectedGear.active">
               Enable
             </button>
             <button class="btn btn-outline-danger" *ngIf="selectedGear.active">
               Disable
-            </button>
+            </button> -->
           </div>
         </div>
       </ng-template>
@@ -361,12 +361,12 @@
             >
               Back
             </button>
-            <button class="btn btn-outline-warning" *ngIf="!selectedResv.approved">
+            <!-- <button class="btn btn-outline-warning" *ngIf="!selectedResv.approved">
               Enable
             </button>
             <button class="btn btn-outline-danger" *ngIf="selectedResv.approved">
               Disable
-            </button>
+            </button> -->
           </div>
         </div>
       </ng-template>
