--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -262,8 +262,7 @@
                       <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
                     </div>
 
-
-                    <div class="form-group mb-3">
+                    <!-- <div class="form-group mb-3">
                       <div class="input-group-prepend">
                         <span class="input-group-text" style="width: 117px" id="inputGroup-sizing-default">Category</span>
                       </div>
@@ -288,7 +287,7 @@
                       <option>Sky</option>
                       <option>Winter</option>
                       </select>
-                    </div>
+                    </div> -->
 
                     <div class="input-group mb-3">
                       <div class="input-group-prepend">
