--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -83,7 +83,7 @@
           </div>
         </div> -->
 
-        <div class="nav-container">
+        <div class="nav-container" *ngIf="!selected">
           <ul class="nav nav-tabs">
             <li class="active">
               <button class="showHand hover btn-primary btn-warning" *ngFor="let category of categories"
